anhadiendo funcion de editar a la vista de nombre productos

--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -52,7 +52,7 @@
                                 <select class="form-control" name="medida" placeholder="medida">
 
                                     <!-- <option disabled selected>Medida</option> -->
-                                    <option value="unidades">uds.</option>
+                                    <option value="uds.">uds.</option>
                                     <option value="kg">kg.</option>
 
                                 </select>
